      do not (i.e., treat everything following the hash character as a
      comment.)
    - Convert tabs to spaces for consistency.
    - Use more curly braces. Prevents random characters as being treated as
      part of a variable name.
    - Don't escape last newline of a multiline command. Worked out fine so
      far, because the next line was empty, but this can easily change...

    Cherry-picked from Arctica GH 3.6.x branch.

  [ Bernard Cafarelli ]
  * nx-X11: link to libdl to fix undefined references to 'dlopen' and 'dlsym'.
    Fixes: #853.
    v2: generally link to libdl in all of nx-X11. (Mike Gabriel)
    Adds:
    - 0630_nx-X11_fix-underlinking-dlopen-dlsym.full.patch

  [ Mike Gabriel ]
  * Security fixes:
    - X.Org CVE-2013-7439:
      1200-CVE-2013-7439-MakeBigReq-don-t-move-the-last-wo.full.patch
  * nx-X11: Prevent underlinking by linking to libNX_X{11,damage,fixes).
    Adds:
    - 0640_nx-X11_fix-underlinking-libNX_Xcomposite_damage_fixes.full.patch
  * nxcompshad: Prevent underlinking by linking to libNX_Xext.
    Adds:
    - 0650_nxcompshad_link-to-NX_Xext.full.patch

 -- X2Go Release Manager <git-admin@x2go.org>  Tue, 17 Mar 2015 19:19:32 +0100

nx-libs (2:3.5.0.31-0x2go1) unstable; urgency=low

  [ Clemens Lang ]
  * Use path discovery for finding makedepend. Remove old cruft. Adds:
    - 0070_nxcomp_use-MAKEDEPEND-in-path.full+lite.patch
    - 0071_nxcompext_use-MAKEDEPEND-in-path.full+lite.patch
    - 0072_nxcompshad_use-MAKEDEPEND-in-path.full+lite.patch
    - 0073_nxproxy_use-MAKEDEPEND-in-path.full+lite.patch
  * Fix dynamic library linking on OS X. Use -dynamiclib instead of -bundle.
    Adds:
    - 0074_nxcomp_use-dynamiclib-flag-on-OS-X.full+lite.patch
    - 0075_nxcompshad_use-dynamiclib-flag-on-OS-X.full+lite.patch
  * Use the correct library naming scheme on OS X. It differs from other
    UNIX-based systems.
    Adds:
    - 0410_nxcomp_use-correct-library-naming-scheme-on-OS-X.full+lite.patch