@@ -121,8 +121,12 @@ nx-libs (2:3.5.0.32-0x2go1) UNRELEASED; urgency=low
       part of a variable name.
     - Don't escape last newline of a multiline command. Worked out fine so
       far, because the next line was empty, but this can easily change...
+  * README.keystrokes:
+    Backported from Arctica GH 3.6.x branch.
 
-    Cherry-picked from Arctica GH 3.6.x branch.
+    - Copy actions documentation from the wiki.
+      Affects:
+      + 0320_nxagent_configurable-keystrokes.full.patch
 
   [ Bernard Cafarelli ]
   * nx-X11: link to libdl to fix undefined references to 'dlopen' and 'dlsym'.
